--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.9.2
+  firebase_storage: ^11.4.1
 
 dev_dependencies:
   flutter_test:
